Make sure this module compiles with java 1.9